--- a/services/quiz_service/pyproject.toml
+++ b/services/quiz_service/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "greenlet>=3.0.0",
     "google-generativeai>=0.3.0",
     "httpx>=0.24.0",
+    "redis>=5.0.0",
     "edu-shared"
 ]
 
